--- a/index.html
+++ b/index.html
@@ -1,57 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Continue</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: #0d0d0d;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .box {
-      text-align: center;
-      padding: 30px;
-      background: #1a1a1a;
-      border-radius: 14px;
-      width: 90%;
-      max-width: 420px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.05);
-    }
-    .title {
-      font-size: 1.4rem;
-      margin-bottom: 20px;
-      line-height: 1.4;
-    }
-    .btn {
-      margin-top: 20px;
-      display: block;
-      width: 100%;
-      padding: 14px;
-      background: #ff004c;
-      color: #fff;
-      text-decoration: none;
-      font-size: 1.2rem;
-      font-weight: bold;
-      border-radius: 10px;
-      transition: 0.25s;
-    }
-    .btn:hover {
-      background: #ff336d;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta http-equiv="refresh" content="0; url=https://example.com">
+<title>Redirecting...</title>
+
+<script>
+window.location.href = "https://example.com";
+</script>
 </head>
 <body>
-  <div class="box">
-    <div class="title">Please confirm you're not a robot.<br>Tap continue to proceed.</div>
-    <a href="Location: https://siluman.pro/dashboard/track/tracking.php?click_id=GEN_PATRA&r=https://siluman.pro/blank.html" class="btn">Continue</a>
-  </div>
+Jika tidak redirect otomatis, klik disini:
+<a href="https://dcbaggc.pixelflow365.com/c/2f550def9500e?track=GEN_PATRA">Continue</a>
 </body>
 </html>
