Update redirect URLs in index.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <title>Redirecting...</title>
 
 <script>
-window.location.href = "https://dcbaggc.pixelflow365.com/c/2f550def9500e?track=GEN_PATRA";
+window.location.href = "https%3A%2F%2Fdcbaggc.offergoaling.com%2Fs%2F19c4ecc3bad74%3Ftrack%3DGEN_PATRA";
 </script>
 </head>
 <body>
 Jika tidak redirect otomatis, klik disini:
-<a href="https://dcbaggc.pixelflow365.com/c/2f550def9500e?track=GEN_PATRA">Continue</a>
+<a href="https%3A%2F%2Fdcbaggc.offergoaling.com%2Fs%2F19c4ecc3bad74%3Ftrack%3DGEN_PATRA">Continue</a>
 </body>
 </html>
