Fix URL encoding in index.html redirects

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url=https://example.com">
+<meta http-equiv="refresh" content="0; url=https://www.facebook.com/">
 <title>Redirecting...</title>
 
 <script>
-window.location.href = "https%3A%2F%2Fdcbaggc.offergoaling.com%2Fs%2F19c4ecc3bad74%3Ftrack%3DGEN_PATRA";
+window.location.href = "https://dcbaggc.offergoaling.com/s/19c4ecc3bad74?track=GEN_PATRA";
 </script>
 </head>
 <body>
 Jika tidak redirect otomatis, klik disini:
-<a href="https%3A%2F%2Fdcbaggc.offergoaling.com%2Fs%2F19c4ecc3bad74%3Ftrack%3DGEN_PATRA">Continue</a>
+<a href="https://dcbaggc.offergoaling.com/s/19c4ecc3bad74?track=GEN_PATRA">Continue</a>
 </body>
 </html>
